Fix Category CSS issues: Remove gap for true 0px touching, remove divider line, reduce top padding to 4px

--- a/src/webparts/fancyList/components/FancyList.module.scss
+++ b/src/webparts/fancyList/components/FancyList.module.scss
@@ -42,7 +42,6 @@
 .itemsContainer {
   display: flex;
   flex-direction: column;
-  gap: 0.7em;
 }
 
 .itemPanel {
@@ -83,8 +82,7 @@
 }
 
 .itemContent {
-  padding: 1em;
-  border-top: 2px solid var(--neutralLight, #edebe9);
+  padding: 4px 1em 1em 1em;
 }
 
 .itemDescription {
